log/build_2025-05-19_16-44-29/user_tools/stdout_stderr.log
running egg_info
writing ../../build/user_tools/user_tools.egg-info/PKG-INFO
writing dependency_links to ../../build/user_tools/user_tools.egg-info/dependency_links.txt
writing entry points to ../../build/user_tools/user_tools.egg-info/entry_points.txt
writing requirements to ../../build/user_tools/user_tools.egg-info/requires.txt
writing top-level names to ../../build/user_tools/user_tools.egg-info/top_level.txt
reading manifest file '../../build/user_tools/user_tools.egg-info/SOURCES.txt'
writing manifest file '../../build/user_tools/user_tools.egg-info/SOURCES.txt'
running build
running build_py
copying user_tools/goal_select.py -> /home/csl/isaac_routing2_v2/build/user_tools/build/lib/user_tools
running install
running install_lib
copying /home/csl/isaac_routing2_v2/build/user_tools/build/lib/user_tools/goal_select.py -> /home/csl/isaac_routing2_v2/install/user_tools/lib/python3.10/site-packages/user_tools
byte-compiling /home/csl/isaac_routing2_v2/install/user_tools/lib/python3.10/site-packages/user_tools/goal_select.py to goal_select.cpython-310.pyc
  File "/home/csl/isaac_routing2_v2/install/user_tools/lib/python3.10/site-packages/user_tools/goal_select.py", line 66
    with open('ENV_FILE,'r',encoding='utf-8') as f:
                                           ^
SyntaxError: unterminated string literal (detected at line 66)

running install_data
running install_egg_info
removing '/home/csl/isaac_routing2_v2/install/user_tools/lib/python3.10/site-packages/user_tools-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/user_tools/user_tools.egg-info to /home/csl/isaac_routing2_v2/install/user_tools/lib/python3.10/site-packages/user_tools-0.0.0-py3.10.egg-info
running install_scripts
Installing goal_select script to /home/csl/isaac_routing2_v2/install/user_tools/lib/user_tools
writing list of installed files to '/home/csl/isaac_routing2_v2/build/user_tools/install.log'
